# hello_world

./: CMakeLists.txt  compile.ps1  hello.c
.github/workflows/: buildit.yml
